@@ -1,5 +1,12 @@
 2010-02-06  Romain Francois <francoisromain@free.fr>
 
+	* src/Rcpp/DottedPair.h : using R_len_t instead of int
+	to anticipate future changes in R
+	* src/Rcpp/VectorBase.h: idem
+	* src/DottedPair.cpp: idem
+	* src/VectorBase.cpp: idem
+	* src/as.cpp: idem
+
 	* src/Rcpp/SimpleVector.h: SimpleVector is now only parameterized
 	by the SEXP type. The c type is automatically retrieved using 
 	the storage_type trait class.
